# Everytag

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  conn_beacon.py  dfu.conf  flake.nix  flash_beacon.sh  prj-analyze.conf  prj-lowpower-nrf51.conf  prj-lowpower.conf  prj-nosmpsvr.conf  prj-smpsvr-lowpower.conf  prj-smpsvr.conf  prj.conf  west.yml  west2nix.toml
.github/actions/setup-nix/: action.yml
.github/workflows/: bsim-test.yml  ci.yml  ncs-upgrade.yml  release.yml  update-lockfiles.yml
boards/: nrf54l15dk_nrf54l05_cpuapp.conf
docs/: airtag-comparison.md
docs/baselines/: README.md  config-nrf52810-3.0.2  config-nrf52832dk-3.0.2  config-nrf54l15dk-3.0.2  symbols-nrf52810-3.0.2.txt
docs/plans/: 2026-04-16-refactor-ext-adv-and-remaining-todos-plan.md  2026-04-16-refactor-ncs-3.2.4-upgrade-plan.md  2026-04-17-fhn-openhaystack-plan.md
scripts/: west2nix.py
src/: accel_data.cpp  accel_data.hpp  beacon_config.cpp  beacon_config.hpp  beacon_logic.cpp  beacon_state.cpp  beacon_state.hpp  ble_glue.c  ble_glue.h  gatt_glue.c  gatt_glue.h  ihardware.hpp  lis2dw12.c  main.cpp  zephyr_hardware.cpp  zephyr_hardware.hpp  zephyr_nvs.cpp  zephyr_nvs.hpp
tests/ble_client/: test_conn_beacon.py  test_conn_beacon_integration.py
tests/bsim/: CMakeLists.txt  overlay-thread-analyzer.conf  prj.conf  vmtest.nix
tests/bsim/src/: main.c
tests/bsim/test_scripts/: run.sh
tests/bsim_dfu/: CMakeLists.txt  prj.conf
tests/bsim_dfu/src/: smp_client.c
tests/fuzz/: CMakeLists.txt
tests/host/: CMakeLists.txt
tests/host/src/: test_main.cpp
tests/native_gatt/: CMakeLists.txt  conftest.py  prj.conf  test_gatt_e2e.py
tests/native_gatt/src/: main.cpp  native_sim_hardware.cpp  native_sim_hardware.hpp
tests/renode/: everytag.resc  mockingbeacon.resc  test_everytag.robot  testcase.yaml
tests/unit/: CMakeLists.txt
tests/zms_persist/: CMakeLists.txt
